--- a/scipnet.html
+++ b/scipnet.html
@@ -594,7 +594,9 @@
                         <option value="Security">Security</option>
                         <option value="Research">Research</option>
                         <option value="Medical">Medical</option>
-                        <option value="Maintenance">Maintenance</option>
+                        <option value="ISD">Internal Security Department</option>
+                        <option value="IA">Intelligence Agency</option>
+                        <option value="OoTA">Office of The Administrator</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -725,67 +727,67 @@
     // User database with hardcoded credentials
     const users = {
         "ad@scipnet": { 
-            password: "adminpass", 
+            password: "Victor Alpha Nu Six Six Three One", 
             clearance: 5, 
             department: "Administrative", 
             prompt: "ad@scipnet:$>" 
         },
-        "doraec@scipnet": { 
-            password: "ethicspass", 
+        "ethics1@scipnet": { 
+            password: "Echo Tau Helios India CHarlie Sierra One", 
             clearance: 5, 
             department: "Ethics Committee", 
-            prompt: "doraec@scipnet:$>" 
+            prompt: "user@scipnet:$>" 
         },
         "EXPUNGED@scipnet": { 
-            password: "mtfpass", 
+            password: "RomeoEchoCharlieHelios-One SoC Head_Heart_Stomach ", 
             clearance: 4, 
             department: "MTF", 
             prompt: "EXPUNGED@scipnet:$>" 
         },
         "Bravo-7@scipnet": { 
-            password: "bravo7pass", 
+            password: "Bravo-Romeo-Alpha-Victor-Omega-Seven", 
             clearance: 3, 
             department: "MTF B-7", 
-            prompt: "Bravo-7@scipnet:$>" 
+            prompt: "MTF_Bravo-7@scipnet:$>" 
         },
         "Epsilon-11@scipnet": { 
-            password: "epsilon11pass", 
+            password: "Echo Phoenix Sierra India Lima Omega Nu Elleven", 
             clearance: 3, 
             department: "MTF E-11", 
-            prompt: "Epsilon-11@scipnet:$>" 
+            prompt: "MTF_Epsilon-11@scipnet:$>" 
         },
         "Nu-7@scipnet": { 
-            password: "nu7pass", 
+            password: "Nu Union Seven", 
             clearance: 3, 
             department: "MTF N-7", 
-            prompt: "Nu-7@scipnet:$>" 
+            prompt: "MTF_Nu-7@scipnet:$>" 
         },
         "admin@scipnet": { 
-            password: "o5pass", 
+            password: "Omega Victor Echo Romeo Sierra Echo Echo Romeo Charlie Omega Union Nu Charlie India Lima", 
             clearance: 6, 
             department: "O5 Council", 
             prompt: "admin@scipnet:$>" 
         },
         "Administrator@scipnet": { 
-            password: "ootapass", 
+            password: "Whiskey Omega Tango Alpha Lima Osprey Zulu India Foxtrot Bravo Delta Sierra Nu Charlie Tango Omega Phoenix Alpha Hotel Yankee Union Kilo Lima One SIx Nine Seven Four Three Whiskey Omega Tango Alpha Lima Osprey Zulu India Foxtrot Bravo Delta Sierra Nu Charlie Tango Omega Phoenix Alpha Hotel Yankee Union Kilo Lima One SIx Nine Seven Four Three", 
             clearance: 6, 
             department: "OoTA", 
             prompt: "Administrator@scipnet:$>" 
         },
         "REDACTED@scipnet": { 
-            password: "isdpass", 
+            password: "Kilo Lima India Foxtrot Alpha Lima Osprey Gamma Victor Yankee Omega Hotel Nu Mu Mu Nu Charlie ", 
             clearance: 5, 
             department: "ISD", 
             prompt: "REDACTED@scipnet:$>" 
         },
         "CLASSIFIEDE@scipnet": { 
-            password: "iapass", 
+            password: "Charlie Mu Mu Mu Nu Nu Nu Hotel Kilo Lamda Lima India Delta Sierra Alpha Foxtrot Yankee Whiskey", 
             clearance: 5, 
             department: "IA", 
             prompt: "CLASSIFIEDE@scipnet:$>" 
         },
         "FSD@scipnet": { 
-            password: "securitypass", 
+            password: "Foxtrot Sierra Delta Six Nine Six Nine Six Nine Nine Six Nine Six Nine SIx", 
             clearance: 2, 
             department: "Security", 
             prompt: "FSD@scipnet:$>" 
