--- a/NOEA-DEVICE-INF-A-503.html
+++ b/NOEA-DEVICE-INF-A-503.html
@@ -50,7 +50,7 @@
             Your access to this service has been<br>
             automatically suspended indefinitely<br>
             for suspicious activity.<br><br>
-            Please contact ARAC Founder on Xbox<br>
+            Please contact seadoota on discord<br>
             immediately once receiving this<br>
             Enforcement Action Notification.
         </div>
