--- a/index.html
+++ b/index.html
@@ -142,6 +142,16 @@
             <p>Developed, maintained, and operated by Gk11773399/SEADOOTA in the United States</p>
         </div>
     </footer>
-    <script src="//code.tidio.co/lezb1xvdsaxahdtmaqrryivfifkbj6q4.js" async></script>
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/68ce7f11f60acf192897a07c/1j5ja0n1g';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
 </body>
 </html>
