--- a/PLP-L-2/index.html
+++ b/PLP-L-2/index.html
@@ -106,12 +106,12 @@
     <script>
         const users = {
             
-            FSD_3421_Debris: { password: 'Facility Security Department user 3421 Junior Guard Debris', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/FSD-Terminal.html' },
-            FSD_8154_Sure: { password: 'Facility Security Department User 8154 Senior Guard Sure', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/FSD-Terminal.html' },
-            FSD_5105_REDACTED_Jr_Guardsmen: { password: 'Facility Security Department Unit 5105 Junior Guardsmen REDACTED', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/FSD-Terminal.html' },
-            FSD_7329_Cerberus_Jr_Guardsmen: { password: 'Facility Security Department Unit 7329 Junior Guardsmen', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/FSD-Terminal.html' },
-            FSD_5494_Toast_Enlist: { password: 'Facility Security Department Unit 5494 Enlist Toast', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/FSD-Terminal.html' },
-            FSD_4385_Kaiden_Jr_Guardsmen: { password: 'Facility Security Department Unit 4385 Junior Guardsmen Kaiden', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/FSD-Terminal.html' },
+            FSD_3421_Debris: { password: 'Facility Security Department user 3421 Junior Guard Debris', redirect: '/FSD-Dashboard' },
+            FSD_8154_Sure: { password: 'Facility Security Department User 8154 Senior Guard Sure', redirect: '/FSD-Dashboard' },
+            FSD_5105_REDACTED_Jr_Guardsmen: { password: 'Facility Security Department Unit 5105 Junior Guardsmen REDACTED', redirect: '/FSD-Dashboardhtml' },
+            FSD_7329_Cerberus_Jr_Guardsmen: { password: 'Facility Security Department Unit 7329 Junior Guardsmen', redirect: '/FSD-Dashboard' },
+            FSD_5494_Toast_Enlist: { password: 'Facility Security Department Unit 5494 Enlist Toast', redirect: '/FSD-Dashboard' },
+            FSD_4385_Kaiden_Jr_Guardsmen: { password: 'Facility Security Department Unit 4385 Junior Guardsmen Kaiden', redirect: '/FSD-Dashboard' },
         
         };
 
