--- a/PLP-L-4/index.html
+++ b/PLP-L-4/index.html
@@ -97,36 +97,32 @@
         const users = {
             MTF_E11_Sr_Op_Ensign: {
                 password: 'Mobile Task Force Epsilon-11 Senior Operative Ensign',
-                redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Epsilon-11-NTF-Terminal.html'
+                redirect: '/Epsilon-11-Dashboard'
             },
             MTF_E11_Op_Ken: {
                 password: 'Mobile Task Force Epsilon-11 Operative Ken',
-                redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Epsilon-11-NTF-Terminal.html'
+                redirect: '/Epsilon-11-Dashboard'
             },
             MTF_E11_Sr_Op_Razor: {
                 password: 'Mobile Task Force Epsilon-11 Senior Operative Razor',
-                redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Epsilon-11-NTF-Terminal.html'
+                redirect: '/Epsilon-11-Dashboard'
             },
             MTF_B7_Op_Ollie: {
                 password: 'Mobile Task Force Beta-7 Operative Ollie',
-                redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Beta-7-MH-Terminal.html'
+                redirect: '/Beta-7-Dashboard'
             },
             MTF_E11_SrOp_Kat: {
                 password: 'Mobile Task Force Epsilon-11 Senior Operative Kat',
-                redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Epsilon-11-NTF-Terminal.html'
+                redirect: '/Epsilon-11-Dashboard'
             },
             MTF_B7_Op_Juxtice: {
                 password: 'Mobile Task Force Beta-7 Operative Juxtice',
-                redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Beta-7-MH-Terminal.html'
+                redirect: '/Beta-7-Dashboard'
             },
             MTF_N7_SrOp_Debzii: {
                 password: 'Mobile Task Force Nu-7 Senior Operative Debzii',
-                redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Nu-7-HD-Terminal.html'
+                redirect: '/Nu-7-Dashboard'
             },
-            Admin: {
-                password: 'ADMIN',
-                redirect: 'https://testurl.com'
-            }
         };
 
         document.getElementById('loginForm').addEventListener('submit', function(e) {
