--- a/PLP-L-5/index.html
+++ b/PLP-L-5/index.html
@@ -106,7 +106,7 @@
     <script>
         const users = {
                 
-            'MTF_A1_Op_Crab': { password: 'Mobile Task Force Alpha-1 Operative Crab', redirect: 'https://armed-research-and-containment-site-omegon/Alpha-1-RRH-Terminal.html' },
+            'MTF_A1_Op_Crab': { password: 'Mobile Task Force Alpha-1 Operative Crab', redirect: '/Alpha-1-Dashboard' },
             'O5-2': { password: 'password', redirect: 'https://testurl.com' },
             'O5-3': { password: 'password', redirect: 'https://testurl.com' },
             'O5-4': { password: 'password', redirect: 'https://testurl.com' },
@@ -122,8 +122,7 @@
             'ISDLeadAgent_Silent': { password: 'Internal Security Department Lead Agent Silent', redirect: 'https://testurl.com' },
             'TAs_OOTA_Secretary': { password: 'The Administrators Office of The Administrator Secretary', redirect: 'https://testurl.com' },
             DoRAEC_E_Comic: { password: 'Department of Regulation And Ethics Committee Editor Comic', redirect: '/DoRAEC-Vice-Editor-173-Terminal.html' },
-            'MTF_A1_Sr_Op_Hubrise': { password: 'Mobile Task Force Alpha-1 Senior Operative HubRise', redirect: '/ISD-Terminal.html' }
-        };
+            };
 
         document.getElementById('loginForm').addEventListener('submit', function(e) {
             e.preventDefault();
