--- a/FSD-Dashboard/index.html
+++ b/FSD-Dashboard/index.html
@@ -97,7 +97,7 @@
     <img id="scp-logo" src="https://media.discordapp.net/attachments/1338795848619917315/1348598592431980590/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png?ex=67d00bd0&is=67ceba50&hm=4e1c1bc8eeead37b748c355e8a719e35565de78b29a1fbd97edfbb9302cdde74&" alt="SCP Logo" style="opacity: 0;">
     <div id="terminal-container">
         <div id="terminal"></div>
-        <button class="digital-button" onclick="window.location.href='https://armed-research-and-containment-site-omegon.vercel.app/L-2-Dashboard.html'">Access L-2 Main Dashboard (Content is Loading...)</button>
+        <button class="digital-button" onclick="window.location.href='/L-2-Dashboard'">Access L-2 Main Dashboard</button>
     </div>
     <script>
         const terminal = document.getElementById('terminal');
