--- a/Epsilon-11-Dashbord/index.html
+++ b/Epsilon-11-Dashbord/index.html
@@ -85,7 +85,7 @@
     <img id="scp-logo" src="https://media.discordapp.net/attachments/1356531198532386971/1356531382981234748/RmCylzz.png?ex=67f0dc4c&is=67ef8acc&hm=b55c8d91234129899af26e344faeadce0e0341c77ddfce2e6b6db64c8e5499b6&5565de78b29a1fbd97edfbb9302cdde74&" alt="SCP Logo" style="opacity: 0;">
     <div id="terminal-container">
         <div id="terminal"></div>
-        <button class="digital-button" onclick="window.location.href='https://armed-research-and-containment-site-omegon.vercel.app/L-4-Dashboard.html'">Access L-5 Main Dashboard</button>
+        <button class="digital-button" onclick="window.location.href='/L-4-Dashboard'">Access L-5 Main Dashboard</button>
     </div>
     <script>
         const terminal = document.getElementById('terminal');
