--- a/Beta-7-Dashboard/index.html
+++ b/Beta-7-Dashboard/index.html
@@ -97,7 +97,7 @@
     <img id="scp-logo" src="https://media.discordapp.net/attachments/1356531198532386971/1356531429172973698/a5fp1Io.png?ex=67f0dc57&is=67ef8ad7&hm=4f1a6a80b1f9e70317b6184cf5a41f6e7dd5a6e379a9ed16730d31e8bea74823&5565de78b29a1fbd97edfbb9302cdde74&" alt="SCP Logo" style="opacity: 0;">
     <div id="terminal-container">
         <div id="terminal"></div>
-        <button class="digital-button" onclick="window.location.href='https://armed-research-and-containment-site-omegon.vercel.app/L-4-Dashboard.html'">Access L-5 Main Dashboard</button>
+        <button class="digital-button" onclick="window.location.href='/L-4-Dashboard'">Access L-5 Main Dashboard</button>
     </div>
     <script>
         const terminal = document.getElementById('terminal');
