--- a/Alpha-1-Dashboard/index.html
+++ b/Alpha-1-Dashboard/index.html
@@ -97,7 +97,7 @@
     <img id="scp-logo" src="https://media.discordapp.net/attachments/1356531198532386971/1356531439906062387/TLW2rYz.png?ex=67f0dc5a&is=67ef8ada&hm=4bc40f15542bf7b7c00719d560ad34a8dbe2e8d49e3efd3da6f425d930a76793&d97edfbb9302cdde74&" alt="SCP Logo" style="opacity: 0;">
     <div id="terminal-container">
         <div id="terminal"></div>
-        <button class="digital-button" onclick="window.location.href='https://armed-research-and-containment-site-omegon.vercel.app/L-5-Dashboard.html'">Access L-5 Main Dashboard</button>
+        <button class="digital-button" onclick="window.location.href='/L-5-Dashboard'">Access L-5 Main Dashboard</button>
     </div>
 
 
