--- a/PLP-L-5/index.html
+++ b/PLP-L-5/index.html
@@ -122,6 +122,7 @@
             'ISDLeadAgent_Silent': { password: 'Internal Security Department Lead Agent Silent', redirect: 'https://testurl.com' },
             'TAs_OOTA_Secretary': { password: 'The Administrators Office of The Administrator Secretary', redirect: 'https://testurl.com' },
             DoRAEC_E_Comic: { password: 'Department of Regulation And Ethics Committee Editor Comic', redirect: '/DoRAEC-Vice-Editor-173-Terminal.html' },
+            O5-12_Deandre: { password: 'Overseer Council Councilman Number 12 Deandre', redirect: '/DoRAEC-Vice-Editor-173-Terminal.html' },
             };
 
         document.getElementById('loginForm').addEventListener('submit', function(e) {
