--- a/home/index.html
+++ b/home/index.html
@@ -44,10 +44,10 @@
             </div>
             <ul>
                 <li><a href="/Contact.html">Contact</a></li>
-                <li><a href="PLP-L-2.html" class="login-button">L2</a></li>
-                <li><a href="PLP-L-3.html" class="login-button">L3</a></li>
-                <li><a href="PLP-L-4.html" class="login-button">L4</a></li>
-                <li><a href="PLP-L-5.html" class="login-button">L5</a></li>
+                <li><a href="PLP-L-5/index" class="login-button">L5</a></li>
+                <li><a href="PLP-L-4/index" class="login-button">L3</a></li>
+                <li><a href="PLP-L-3/index" class="login-button">L4</a></li>
+                <li><a href="PLP-L-2/index" class="login-button">L5</a></li>
                 <li class="policy-buttons">
                     <a href="/Terms-Of-Use.html" class="policy-button">Terms</a>
                     <a href="/Privacy-Policy.html" class="policy-button">Privacy</a>
