--- a/PLP-L-4/index.html
+++ b/PLP-L-4/index.html
@@ -115,8 +115,8 @@
                 password: 'Mobile Task Force Epsilon-11 Senior Operative Kat',
                 redirect: '/Epsilon-11-Dashboard'
             },
-            MTF_B7_Op_Juxtice: {
-                password: 'Mobile Task Force Beta-7 Operative Juxtice',
+            MTF_B7_Op_Vivdabagle: {
+                password: 'Mobile Task Force Beta-7 Vivdabagle',
                 redirect: '/Beta-7-Dashboard'
             },
             MTF_N7_SrOp_Debzii: {
