--- a/L-5T-Dashboard/index.html
+++ b/L-5T-Dashboard/index.html
@@ -90,7 +90,7 @@
                 <h2>L-5 CoE</h2>
                 <p>Access Level 5 Code of Ethics</p>
             </div>
-            <div class="dashboard-box" onclick="window.location.href='https://abacromby-studios.github.io/Site-Omegon/L-5-Lockdown-Response-Code.html'">
+            <div class="dashboard-box" onclick="window.location.href='https://secure-containment-installation.abacromby9-studios.xyz/L-5-LRC/index.html'">
                 <h2>L-5 LRC</h2>
                 <p>Access Level 5 Lockdown Response Code</p>
             </div>
