--- a/L-5T-Dashboard/index.html
+++ b/L-5T-Dashboard/index.html
@@ -86,11 +86,11 @@
         </div>
 
         <div class="dashboard-grid">
-            <div class="dashboard-box" onclick="window.location.href='https://abacromby-studios.github.io/Site-Omegon/L-5-Code-of-Ethics.html'">
+            <div class="dashboard-box" onclick="window.location.href=https://secure-containment-installation.abacromby9-studios.xyz/L-5T-Code-of-Ethics/index.html">
                 <h2>L-5 CoE</h2>
                 <p>Access Level 5 Code of Ethics</p>
             </div>
-            <div class="dashboard-box" onclick="window.location.href='https://secure-containment-installation.abacromby9-studios.xyz/L-5T-Lockdown-Response-Code/index.html'">
+            <div class="dashboard-box" onclick="window.location.href='https://secure-containment-installation.abacromby9-studios.xyz/L-5T-Lockdown-Response-Code/index.html'>
                 <h2>L-5 LRC</h2>
                 <p>Access Level 5 Lockdown Response Code</p>
             </div>
