--- a/L-5T-Dashboard/index.html
+++ b/L-5T-Dashboard/index.html
@@ -86,7 +86,7 @@
         </div>
 
         <div class="dashboard-grid">
-            <div class="dashboard-box" onclick="window.location.href=https://secure-containment-installation.abacromby9-studios.xyz/L-5T-Code-of-Ethics/index.html">
+            <div class="dashboard-box" onclick="window.location.href='https://secure-containment-installation.abacromby9-studios.xyz/L-5T-Code-of-Ethics/index.html'>
                 <h2>L-5 CoE</h2>
                 <p>Access Level 5 Code of Ethics</p>
             </div>
