--- a/PLP-L-4/index.html
+++ b/PLP-L-4/index.html
@@ -105,8 +105,8 @@ i<!DOCTYPE html>
                 password: "Mobile Task Force Epsilon-11 Operative Ken",
                 redirect: "/Epsilon-11-Dashboard"
             },
-            "MTF_E11_Sr_Op_Razor": {
-                password: "Mobile Task Force Epsilon-11 Senior Operative Razor",
+            "MTF_E11_Op_Spot": {
+                password: "Mobile Task Force Epsilon-11 Senior Operative Spot",
                 redirect: "/Epsilon-11-Dashboard"
             },
             "MTF_B7_Op_Ollie": {
