--- a/PLP-L-4/index.html
+++ b/PLP-L-4/index.html
@@ -107,7 +107,7 @@ i<!DOCTYPE html>
             },
             "MTF_E11_Op_Spot": {
                 password: "Mobile Task Force Epsilon-11 Senior Operative Spot",
-                redirect: "/Epsilon-11-Dashboard"
+                redirect: "https://secure-containment-installation-39.abacromby9-studios/E-11-NTT/index.html"
             },
             "MTF_B7_Op_Ollie": {
                 password: "Mobile Task Force Beta-7 Operative Ollie",
