--- a/PLP-L-5/index.html
+++ b/PLP-L-5/index.html
@@ -112,7 +112,7 @@
     <script>
         const users = {
             "MTF_A1_Op_Crab": { password: "Mobile Task Force Alpha-1 Operative Crab", redirect: "/Alpha-1-Dashboard" },
-            "ISD_Intensl_A_Blimbo": { password: "Internal Security Department Internal Agent Blimvo", redirect: "https://secure-containment-installation-39/ISD-Dashboard/index.html" },
+            "ISD_Intensl_A_Blimbo": { password: "Internal Security Department Internal Agent Blimbo", redirect: "https://secure-containment-installation-39/ISD-Dashboard/index.html" },
             "O5-3": { password: "password", redirect: "https://testurl.com" },
             "O5-4 Youknowme": { password: "Overseer Council Councilman Number 4", redirect: "https://secure-containment-installation-39.abacromby9-studios.xyz/L-5T-Dashboard" },
             "O5-5": { password: "password", redirect: "https://testurl.com" },
