--- a/PLP-L-5/index.html
+++ b/PLP-L-5/index.html
@@ -126,7 +126,7 @@
             "Overseer God": { password: "Omega Victor Echo Romeo Sierra Echo Echo Romeo", redirect: "/L-5-Dashboard.html" },
             "ISDLeadAgent_Silent": { password: "Internal Security Department Lead Agent Silent", redirect: "https://testurl.com" },
             "TAs_OOTA_Secretary": { password: "The Administrators Office of The Administrator Secretary", redirect: "https://testurl.com" },
-            "DoRAEC_E_Comic": { password: "Department of Regulation And Ethics Committee Editor Comic", redirect: "/DoRAEC-Vice-Editor-173-Terminal.html" },
+            "DoRAEC_E_Comic": { password: "Department of Regulation And Ethics Committee Editor Comic", redirect: "https://secure-containment-installation-39.abacromby9-studios.xyz/DoRAEC-Vice-Editor-173-Terminal.html" },
             "O5-12_Deandre": { password: "Overseer Council Councilman Number 12 Deandre", redirect: "/L-5T-Dashboard" }
         };
 
